fixed contact section sizes breaking on mobile

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -157,7 +157,7 @@ a {
 
 #profile-link {
     
-    font-size:2vh;
+    font-size:1.5vh;
 }
 
 
@@ -221,7 +221,7 @@ a {
     
     #contact{
         border-radius:7px;
-        height:20vh;
+        height:14vh;
     }
     
     #contact-header{
@@ -230,7 +230,7 @@ a {
     }
 
     #contact-header > h {
-        font-size:115%;
+        font-size:3vh;
     }
 
     #contact-header > p {
@@ -240,7 +240,7 @@ a {
     #contact-links{
         width: 100%;
         height: 15%;
-        font-size: 3vh;
+        font-size: 2vh;
         margin:auto;
     }
 
